--- a/RA_combined_plots.Rmd
+++ b/RA_combined_plots.Rmd
@@ -47,7 +47,40 @@ for(spp in names(data)) {
   }
 dev.off()
 ```
-                        
+SummaryInd$growth_ratio <- SummaryInd$growth_inv /SummaryInd$repro_inv
+         
+#How to depict a trade-off?
+- only GRBU has an obvious trade-off, where absolute growth declines
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
+  par(mfcol=c(3,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.5,.7,.6,0.2)) 
+xvar <- "growth_leaf"
+xvar2 <- "growth_inv"
+xvar3 <- "age"
+yvar <- "repro_inv"
+yvar2 <- "growth_ratio"
+
+data <- subset(SummaryInd,repro_inv>0)
+data <- split(data, data$species)
+
+lmfits <- lapply(data, function(x) lm(log10(x[[yvar]]) ~  (log10(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3, main=spp,col=col.age(data[[spp]]$age))
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar2,log="xy",xlab="",ylab="",cex=1.3, main=spp,col=col.age(data[[spp]]$age))
+    plot_yvar_vs_xvar(data[[spp]], yvar2, xvar3,log="xy",xlab="",ylab="",cex=1.3, main=spp,col=col.age(data[[spp]]$age))
+ }
+
+mtext("repro inv", 2, outer=TRUE,cex=1.2)
+mtext("growth inv", 1, outer=TRUE,cex=1.2)
+legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
+```
 
 ###Trends by age
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=18, fig.height=15}
