--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -30,8 +30,8 @@ source("R/figures.R")
 
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7.5}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
-mod <- lm(log(growth_inv)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
-plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+mod <- lm(log(growth_leaf)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
+plot((1+repro_inv)~growth_leaf, SummaryInd, log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
 words.top.left.logxy(mod)
 legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 abline(0,1)
@@ -280,40 +280,6 @@ mtext("Initial leaf area", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
-
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "leaf_area"
-xvar <- "leaf_area_0"
-
-data <- subset(SummaryInd)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(log10(x[[yvar]]) ~  (log10(x[[xvar]]))))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-results$yvar <- "total_inv"
-results$xvar <- "leaf_area_0"
-results$data <- "SummaryInd"
-results$model <- "log10(yvar)~log10(xvar)"
-saved_results <- bind_cols(saved_results[1:2],results[2])
-names(saved_results) <- c("species","r1","r2")
-results[1:6]
-
-for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.age(data[[spp]]$age))
-}
-
-mtext("Leaf area at time 1", 2, outer=TRUE,cex=1.2)
-mtext("Leaf area at time 0", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
-```
-
-
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=6, fig.height=6}
 # pdf("figs2/R2-improve.pdf", height=5, width=5)
 # plot
@@ -327,10 +293,10 @@ text(r1~r2,saved_results, labels=max_RA, pos=c("1","1","1","1","1","1","4","1","
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-pdf("figs2/shoot_leaf_area_VS_repro_inv.pdf", height=11.69, width=8.27)
-plot
-par(mfrow=c(4,4), cex=1, omi=c(.6,.5,.1,.1), mai=c(.35,.4,.25,0.1)) 
-#par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2))
+#pdf("figs2/shoot_leaf_area_VS_repro_inv.pdf", height=11.69, width=8.27)
+#plot
+#par(mfrow=c(4,4), cex=1, omi=c(.6,.5,.1,.1), mai=c(.35,.4,.25,0.1)) 
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2))
 yvar <- "shoot_leaf_area"
 xvar <- "repro_inv"
 
@@ -345,14 +311,14 @@ for(spp in names(data)) {
 mtext("Shoot leaf area", 2, outer=TRUE,cex=1.2,line=1.2)
 mtext("Reproductive investment (mg)", 1, outer=TRUE,cex=1.2,line=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
-dev.off()
+#dev.off()
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-pdf("figs2/leaf_area_increase_VS_repro_inv.pdf", height=11.69, width=8.27)
-plot
-par(mfrow=c(4,4), cex=1, omi=c(.6,.5,.1,.1), mai=c(.35,.4,.25,0.1)) 
-#par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+#pdf("figs2/leaf_area_increase_VS_repro_inv.pdf", height=11.69, width=8.27)
+#plot
+#par(mfrow=c(4,4), cex=1, omi=c(.6,.5,.1,.1), mai=c(.35,.4,.25,0.1)) 
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
 yvar <- "growth_leaf_area_log"
 xvar <- "repro_inv"
 
@@ -367,7 +333,7 @@ for(spp in names(data)) {
 mtext("Leaf area increase (log-log)", 2, outer=TRUE,cex=1.2,line=1.2)
 mtext("Reproductive investment (mg)", 1, outer=TRUE,cex=1.2,line=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
-dev.off()
+#dev.off()
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=15, fig.height=15}
@@ -399,37 +365,6 @@ mtext("Initial leaf area", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
-###Including all investment vs. growth  
-* reproducing individuals now plot closer to the "expected line" (as defined by juvenile individuals), but for most species there is still a considerable discrepency
-* fit line of veg investment vs. total plant weight through non-reproductive plants
-* derive "predicted" total investment (veg+repro) for reproducing individuals
-* determine proportional reproductive cost for reproducing individuals; probably look by age
-*LEES, BOLE, EPMI become much tighter when reproductive investment included - all but 1 species
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "total_inv"
-xvar <- "total_weight"
-
-data <- subset(SummaryInd)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-results
-
-for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.mature(data[[spp]]$mature))
-}
-
-mtext("Vegetative + reproductive investment (mg)", 2, outer=TRUE,cex=1.2)
-mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
-```
 
 ###Calculating cost of reproduction as a growth deficit
     * despite having a clause to subset SummaryInd,
@@ -475,32 +410,6 @@ plot(cost_ratio~repro_inv,Summary2,col=col.age(age),pch=16,log="xy",ylab="ratio 
 legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=.8,bty="n")
 ```
 
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "cost_ratio"
-xvar <- "repro_inv"
-
-data <- subset(Summary2,species!="BOLE")
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm((x[[yvar]]) ~  ((x[[xvar]]))))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-results
-
-for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.age(data[[spp]]$age))              
-}
-
-mtext("Growth deficit (mg)", 2, outer=TRUE,cex=1.2)
-mtext("Reproductive investment (mg)", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
-```
-
 ####There is a much less clearcut pattern with respect to height growth - for most species height growth declines dramatically with age, overshadowing any reprodutive maturity affects  
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
@@ -526,32 +435,6 @@ for(spp in names(data)) {
 mtext("Increase in plant height (mm)", 2, outer=TRUE,cex=1.2)
 mtext("Initial plant height (mm)", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
-```
-
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "growth_height"
-xvar <- "height_0"
-
-data <- subset(SummaryInd,growth_height>0)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-results
-
-for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.mature(data[[spp]]$mature))
-}
-
-mtext("Increase in plant height (mm)", 2, outer=TRUE,cex=1.2)
-mtext("Initial plant height (mm)", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
 ```
 
 ####RA is a population level parameter, so noise expected across individuals
@@ -588,26 +471,25 @@ mod <- lm(log(growth_stem_diameter)~RA,data=subset(SummaryInd,RA>0))
 words.top.right.logx(mod)
 legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=0.8,bty="n")
 
-plot(RA~growth_shoot_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
-mod <- lm(log(growth_shoot_diameter)~RA,data=subset(SummaryInd,RA>0))
+plot(RA_leaf_area~growth_stem_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16,ylim=c(0,1.5))
+mod <- lm(log(growth_stem_diameter)~RA_leaf_area,data=subset(SummaryInd,RA_leaf_area>0&RA_leaf_area<1.5))
 words.top.right.logx(mod)
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "RA"
+yvar <- "RA_leaf_area"
 xvar <- "growth_stem_diameter"
 
-data <- subset(SummaryInd,RA>0)
+data <- subset(SummaryInd,RA_leaf_area>0&RA_leaf_area<1.5)
 data <- split(data, data$species)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
-                    main=spp,col=col.age(data[[spp]]$age))
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",cex=1.4, xlab="",ylab="",main=spp,col=col.age(data[[spp]]$age))
 }
 
 mtext("Stem diameter growth", 1, outer=TRUE,cex=1.2)
-mtext("RA", 2, outer=TRUE,cex=1.2)  
+mtext("RA (leaf area)", 2, outer=TRUE,cex=1.2)  
 legend("bottomleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
     
