--- a/tests.Rmd
+++ b/tests.Rmd
@@ -25,28 +25,10 @@ legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
 
-SummaryInd$growth_height_per <- SummaryInd$growth_height/SummaryInd$height_0
-SummaryInd$growth_leaf_per <- SummaryInd$growth_leaf/SummaryInd$leaf_weight
-SummaryInd$growth_leaf_pos <- SummaryInd$growth_leaf
+plot(repro_inv~growth_leaf,data=subset(SummaryInd,RA>0),log="xy",col=col.spp(species), pch=16)
+mod <- lm(log(growth_stem_diameter)~RA_leaf_area,data=subset(SummaryInd,RA_leaf_area>0&RA_leaf_area<1.5))
+words.top.right.logx(mod)
 
-
-
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.3,.7,.6,0.2)) 
-yvar <- "growth_leaf_per"
-xvar2 <- "diameter"
-
-data <- subset(SummaryInd)
-data <- split(data, data$species)
-
-for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar2,log="xy",xlab="", ylab="", cex=1.3, main=spp,col=col.age(data[[spp]]$age))
-}
-
-mtext("Height growth (%)", 2, outer=TRUE,cex=1.2)
-mtext("diameter", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
-```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 savpar(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,.7,.6,0.2)) 
@@ -75,32 +57,10 @@ mtext("Reproductive investment", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,.7,.6,0.2)) 
-yvar <- "total_inv"
-xvar <- "leaf_area_0"
 
-data <- subset(SummaryInd)
-data <- split(data, data$species)
+SummaryInd$leaf_inv_ratio = SummaryInd$growth_stem / SummaryInd$growth_leaf
 
-lmfits <- lapply(data, function(x) lm(log10(x[[yvar]]) ~  (log10(x[[xvar]]))))
-results <- summarise_all_fits(lmfits)
 
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-results
-saved <- bind_cols(saved,results[2])
-
-for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3, main=spp,col=col.age(data[[spp]]$age))
- }
-
-mtext("Height growth (log-log)", 2, outer=TRUE,cex=1.2)
-mtext("Reproductive investment", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
-```
 
 
 
@@ -132,3 +92,43 @@ arrows(data[[spp]]$diameter, data[[spp]]$leaf_weight, data[[spp]]$diameter_0,dat
 ```
 
 
+
+```{r}
+par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
+mod <- lm(log(growth_inv)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
+plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+words.top.left.logxy(mod)
+legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
+abline(0,1)
+text(2.1,3,srt=45,"RA = 0.5")
+abline(log10(3),1)
+text(2,9,srt=45,"RA = 0.75")
+abline(log10(9),1)
+text(2,25,srt=45,"RA = 0.9")
+abline(log10(19),1)
+text(2,60,srt=45,"RA = 0.95")
+abline(log10(.111),1)
+text(19,3,srt=45,"RA = 0.1")
+abline(log10(.010101),1)
+text(170,2.4,srt=45,"RA = 0.01")
+
+#mod <- lm(log(growth_leaf)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
+plot((1+repro_inv)~growth_leaf, SummaryInd, log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+#words.top.left.logxy(mod)
+legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
+abline(0,1)
+text(2.1,3,srt=45,"RA = 0.5")
+abline(log10(3),1)
+text(2,9,srt=45,"RA = 0.75")
+abline(log10(9),1)
+text(2,25,srt=45,"RA = 0.9")
+abline(log10(19),1)
+text(2,60,srt=45,"RA = 0.95")
+abline(log10(.111),1)
+text(19,3,srt=45,"RA = 0.1")
+abline(log10(.010101),1)
+text(170,2.4,srt=45,"RA = 0.01")
+```
+
+plot(growth_leaf~growth_stem,SummaryInd, log="xy", col=col.age(age),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+abline(0,1)
